
NEW FEATURES

    o new option 'ret.idx' in `seqSetFilter()` for unsorted sample and variant
      indices

    o new option 'ret.idx' in `seqSetFilterAnnotID()` for unsorted variant
      index

    o rewrite the function `seqSetFilterPos()`: new options 'ref' and 'alt',
      'multi.pos=TRUE' by default

UTILITIES

    o allow no variant in `seqApply()` and `seqBlockApply()`

BUG FIXES

    o `seqgGDS2VCF()` should output "." instead of NA in the FILTER column


CHANGES IN VERSION 1.30.0
-------------------------

UTILITIES

    o show a warning when an unsorted index is used in `seqSetFilter()`

    o show a message if `seqVCF_Header()` fails

    o a new option 'chr_prefix' in `seqGDS2VCF()`

BUG FIXES

    o `seqVCF_Header()` fixes 'contig' in the header of VCF if there are
      different fields


CHANGES IN VERSION 1.28.1
-------------------------

BUG FIXES

    o `seqRecompress(, verbose=FALSE)` works correctly

    o `seqSetFilter(, action="push+set")` should not reset the filter
      before setting a new filter


CHANGES IN VERSION 1.28.0
-------------------------

NEW FEATURES

    o new functions `seqUnitSlidingWindows()`, `seqUnitApply()`,
      `seqUnitFilterCond()`

    o new variable "$variant_index", "$sample_index" in `SeqGetData()`,
      `seqBlockApply()` and `seqUnitApply()` to get the indices of selected
      variants

    o new arguments '.padNA' and '.envir' in `seqGetData()`

    o new functions `seqSetFilterAnnotID()` and `seqGDS2BED()`

    o multicore function in `seqBED2GDS(, parallel=)`

    o new package-wide option `options(seqarray.nofork=TRUE)` to disable forking

    o new option 'minor' in `seqAlleleFreq()` and `seqAlleleCount()`

    o new option 'verbose' in `seqMissing()`, `seqAlleleFreq()` and
      `seqAlleleCount()`; '.progress' is deprecated, but still can be used
      for compatiblity

    o `seqAlleleFreq()`, `seqAlleleCount()`, `seqMissing()`,