@@ -18,7 +18,9 @@ UTILITIES
 
 BUG FIXES
 
-    o `seqgGDS2VCF()` should output "." instead of NA in the FILTER column
+    o `seqGDS2VCF()` should output "." instead of NA in the FILTER column
+
+    o `seqGetData()` should support factor when '.padNA=TRUE' or '.tolist=TRUE'
 
 
 CHANGES IN VERSION 1.30.0
